	a "deleter" compiled into the respective plugin (see PluginInterface.h)
	* New central auxiliary constant management method in Registry:
	getAuxiliaryConstantSymbol(), PluginAtom no longer manages its auxiliaries.
	* added comfortable "text-only no-registry-ID-trouble" (and slow) plugin interface ComfortPluginInterface.hpp

	Testing and debugging additions:

	* New Logger component with log-levels, hierarchical indentation and
	NDEBUG-dependent logging.
	* Printhelpers.hpp utilities for comfortable printing of various boost
	and STL containers.
	* testsuite/run-dlvhex-tests.sh: Added possibility for negative testcases.
	(See comments in trunk/run-dlvhex-tests.sh for some documentation.)
	* testsuite/answerset_compare.py: New script for real set-comparison for
	verifying answer-sets (previously the order of answer sets mattered).
	* src/dlvhex/gdbdlvhex.sh: Added shellscript to use gdb with
	libtool-built uninstalled binary.
	* src/dlvhex/valgrinddlvhex.sh: Likewise for valgrind.
	* New testcase notwellfounded2.hex for guess and check model builder
	(should test minimality of disjunctions, this test crashes dlvhex trunk/)

	Other (smaller) additions:

	* Prototype support for clingo as backend ASP solver (aggregates and some
	builtins probably do not work correctly yet - please file a Trac issue or
	drop the maintainers an email if you need some feature).
	* Added static linking test for testsuite TestPlugin.
	* Added commandline option for keeping auxiliary predicates in output.
	* Added commandline option for omitting EDB facts from output.
	* Added commandline option for configuring graphviz output. (Eval/model
	graph are not yet fully implemented but partially exists in testcases.)
	* External atoms may now appear in aggregates (this was partially
	forbidden and incorrectly implemented for the other cases in dlvhex
	1.x), see also new testcase examples/agg3.hex.
	* Added central auxiliary constant management method to Registry: