@@ -106,6 +106,7 @@ PLAINHEXSOURCES = \
 	$(top_srcdir)/src/dlvhex/HexParser.cpp \
 	$(top_srcdir)/src/dlvhex/ID.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/Logger.cpp \
 	$(top_srcdir)/src/dlvhex/PlainModelGenerator.cpp \
 	$(top_srcdir)/src/dlvhex/PluginContainer.cpp \
@@ -115,12 +116,13 @@ PLAINHEXSOURCES = \
 	$(top_srcdir)/src/dlvhex/ProcessBuf.cpp \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/WellfoundedModelGenerator.cpp
 
 TestPlainHEX_SOURCES = \
 	$(top_srcdir)/testsuite/TestPlainHEX.cpp \
   $(PLAINHEXSOURCES)
-TestPlainHEX_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@
+TestPlainHEX_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 TestPlainHEX_CPPFLAGS = $(EXTSOLVER_CPPFLAGS)
 
 TestEvalEndToEnd_SOURCES = \
@@ -139,21 +141,23 @@ TestEvalEndToEnd_SOURCES = \
 	$(top_srcdir)/src/dlvhex/DLVresultParserDriver.cpp \
 	$(top_srcdir)/src/dlvhex/AnswerSet.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
+	$(top_srcdir)/src/dlvhex/HexParser.cpp \
+	$(top_srcdir)/src/dlvhex/HexGrammarPTToASTConverter.cpp \
 	$(top_srcdir)/src/dlvhex/ASPSolverManager.cpp \
 	$(top_srcdir)/src/dlvhex/ASPSolver.cpp \
 	$(top_srcdir)/src/dlvhex/DLVProcess.cpp \
 	$(top_srcdir)/src/dlvhex/Configuration.cpp \
 	$(top_srcdir)/src/dlvhex/ProcessBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Atoms.cpp \
-	$(top_srcdir)/src/dlvhex/HexGrammarPTToASTConverter.cpp \
-	$(top_srcdir)/src/dlvhex/HexParser.cpp \
 	$(top_srcdir)/src/dlvhex/Logger.cpp \
 	$(top_srcdir)/src/dlvhex/ID.cpp \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestEvalEndToEnd_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@ 
+TestEvalEndToEnd_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 TestEvalEndToEnd_CPPFLAGS = $(EXTSOLVER_CPPFLAGS)
 
 TestASPSolver_SOURCES = \
@@ -162,6 +166,7 @@ TestASPSolver_SOURCES = \
 	$(top_srcdir)/src/dlvhex/DLVresultParserDriver.cpp \
 	$(top_srcdir)/src/dlvhex/AnswerSet.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/ASPSolverManager.cpp \
 	$(top_srcdir)/src/dlvhex/DLVProcess.cpp \
 	$(top_srcdir)/src/dlvhex/Configuration.cpp \
@@ -176,8 +181,9 @@ TestASPSolver_SOURCES = \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
 	$(top_srcdir)/src/dlvhex/Benchmarking.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestASPSolver_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@
+TestASPSolver_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 TestASPSolver_CPPFLAGS = $(EXTSOLVER_CPPFLAGS) 
 
 #TODO evalheuristic should (and could) be tested with fake model generator and fake interpretation
@@ -195,6 +201,7 @@ TestEvalHeuristic_SOURCES = \
 	$(top_srcdir)/src/dlvhex/PredicateMask.cpp \
 	$(top_srcdir)/src/dlvhex/DependencyGraph.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/DLVresultParserDriver.cpp \
 	$(top_srcdir)/src/dlvhex/AnswerSet.cpp \
 	$(top_srcdir)/src/dlvhex/ASPSolverManager.cpp \
@@ -210,8 +217,9 @@ TestEvalHeuristic_SOURCES = \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestEvalHeuristic_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@ 
+TestEvalHeuristic_LDADD = $(EXTSOLVER_LDFLAGS) $(EXTSOLVER_LIBS) @LIBLTDL@ @LIBADD_DL@  @LIBCURL@
 TestEvalHeuristic_CPPFLAGS = $(EXTSOLVER_CPPFLAGS) 
 
 TestComponentGraph_SOURCES = \
@@ -226,19 +234,22 @@ TestComponentGraph_SOURCES = \
 	$(top_srcdir)/src/dlvhex/HexParser.cpp \
 	$(top_srcdir)/src/dlvhex/Logger.cpp \
 	$(top_srcdir)/src/dlvhex/ID.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
 	$(top_srcdir)/src/dlvhex/Configuration.cpp \
 	$(top_srcdir)/src/dlvhex/PredicateMask.cpp \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestComponentGraph_LDADD = @LIBLTDL@ @LIBADD_DL@ 
+TestComponentGraph_LDADD = @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 
 TestDependencyGraph_SOURCES = \
 	$(top_srcdir)/src/dlvhex/DependencyGraph.cpp \
 	$(top_srcdir)/src/dlvhex/DependencyGraphFull.cpp \
 	$(top_srcdir)/testsuite/TestDependencyGraph.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/PluginInterface.cpp \
 	$(top_srcdir)/src/dlvhex/PredicateMask.cpp \
 	$(top_srcdir)/src/dlvhex/Benchmarking.cpp \
@@ -251,8 +262,9 @@ TestDependencyGraph_SOURCES = \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
 	$(top_srcdir)/src/dlvhex/Configuration.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestDependencyGraph_LDADD = @LIBLTDL@ @LIBADD_DL@ 
+TestDependencyGraph_LDADD = @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 
 TestHexParser_SOURCES = \
 	$(top_srcdir)/testsuite/TestHexParser.cpp \
@@ -260,6 +272,7 @@ TestHexParser_SOURCES = \
 	$(top_srcdir)/src/dlvhex/HexParser.cpp \
 	$(top_srcdir)/src/dlvhex/Atoms.cpp \
 	$(top_srcdir)/src/dlvhex/Interpretation.cpp \
+	$(top_srcdir)/src/dlvhex/InputProvider.cpp \
 	$(top_srcdir)/src/dlvhex/Logger.cpp \
 	$(top_srcdir)/src/dlvhex/ID.cpp \
 	$(top_srcdir)/src/dlvhex/ProgramCtx.cpp \
@@ -267,8 +280,9 @@ TestHexParser_SOURCES = \
 	$(top_srcdir)/src/dlvhex/Printer.cpp \
 	$(top_srcdir)/src/dlvhex/Configuration.cpp \
 	$(top_srcdir)/src/dlvhex/Registry.cpp \
+	$(top_srcdir)/src/dlvhex/URLBuf.cpp \
 	$(top_srcdir)/src/dlvhex/Error.cpp
-TestHexParser_LDADD = @LIBLTDL@ @LIBADD_DL@ 
+TestHexParser_LDADD = @LIBLTDL@ @LIBADD_DL@ @LIBCURL@
 
 TestTables_SOURCES = TestTables.cpp  $(top_srcdir)/src/dlvhex/Logger.cpp $(top_srcdir)/src/dlvhex/ID.cpp
 TestTables_LDADD = @LIBLTDL@ @LIBADD_DL@ 
