@@ -38,6 +38,7 @@
 #include "dlvhex/Registry.hpp"
 #include "dlvhex/Printer.hpp"
 #include "dlvhex/HexParser.hpp"
+#include "dlvhex/InputProvider.hpp"
 #include "dlvhex/AnswerSet.hpp"
 
 #define BOOST_TEST_MODULE "TestASPSolver"
@@ -66,8 +67,10 @@ void testSimple()
   ss <<
     "a. c(d,e). g(a)." << std::endl <<
     "f(X) v b :- g(X), not h(X,X)." << std::endl;
-  HexParser parser(ctx);
-  BOOST_REQUIRE_NO_THROW(parser.parse(ss));
+  InputProviderPtr ip(new InputProvider);
+  ip->addStreamInput(ss, "testinput");
+  BasicHexParser parser;
+  BOOST_REQUIRE_NO_THROW(parser.parse(ip, ctx));
 
 	LOG_REGISTRY_PROGRAM(ctx);
 
